crates/oxc_react_compiler/tests/snapshots/ssa-renaming-unconditional-with-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-renaming-unconditional-with-mutation.js
---
import { c as _c } from "react/compiler-runtime";
import { mutate } from "shared-runtime";
function useFoo(props) {
	const $ = _c(4);
	let x;
	if ($[0] !== props.bar || $[1] !== props.cond || $[2] !== props.foo) {
		x = [];
		x.push(props.bar);
		if (props.cond) {
			x = [];
			x.push(props.foo);
		} else {
			x = [];
			x.push(props.bar);
		}
		mutate(x);
		$[0] = props.bar;
		$[1] = props.cond;
		$[2] = props.foo;
		$[3] = x;
	} else {
		x = $[3];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		bar: "bar",
		foo: "foo",
		cond: true
	}],
	sequentialRenders: [
		{
			bar: "bar",
			foo: "foo",
			cond: true
		},
		{
			bar: "bar",
			foo: "foo",
			cond: true
		},
		{
			bar: "bar",
			foo: "foo",
			cond: false
		}
	]
};
