crates/oxc_react_compiler/tests/snapshots/ssa-renaming-via-destructuring-with-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-renaming-via-destructuring-with-mutation.js
---
import { mutate } from "shared-runtime";
function useFoo() {}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{
		bar: "bar",
		foo: "foo",
		cond: true
	}],
	sequentialRenders: [
		{
			bar: "bar",
			foo: "foo",
			cond: true
		},
		{
			bar: "bar",
			foo: "foo",
			cond: true
		},
		{
			bar: "bar",
			foo: "foo",
			cond: false
		}
	]
};
