crates/oxc_react_compiler/tests/snapshots/ssa-renaming.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ssa-renaming.js
---
import { c as _c } from "react/compiler-runtime";
function foo(props) {
	const $ = _c(4);
	let x;
	if ($[0] !== props.bar) {
		x = [];
		x.push(props.bar);
		$[0] = props.bar;
		$[1] = x;
	} else {
		x = $[1];
	}
	if (props.cond) {
		if ($[2] !== props.foo) {
			x = [];
			x.push(props.foo);
			$[2] = props.foo;
			$[3] = x;
		} else {
			x = $[3];
		}
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
